<resources>
    <string name="app_name">Encrypt SMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Encrypt SMS</string>
    <string name="nav_header_subtitle">Settings</string>
    <string name="nav_header_desc">Text Nav</string>
    <string name="action_home">Home</string>

    <string name="menu_conversation">Conversation</string>
    <string name="menu_threads">Inbox</string>
    <string name="menu_nav_about">About</string>
    <string name="action_about">About</string>
    <string name="title_button">Populate</string>
    <string name="title_activity_title">Encrypt SMS</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment_label">Welcome</string>
    <string name="about_fragment_label">About</string>
    <string name="start">Start</string>
    <string name="send_email">Send Email</string>

    <string name="hello_welcome_fragment">Encrypt SMS</string>
    <string name="hello_about_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_welcome">Welcome</string>
    <string name="menu_about">About</string>
    <string name="title_conversation_detail">Conversation Detail</string>
    <string name="menu_nav_vis">Action Bar</string>
    <string name="action_no_vis">Action Bar Off</string>
    <string name="activity_threads">Threads#1</string>
    <string name="message">Text Display</string>
    <string name="total">Total:</string>
    <string name="item_totals_label">Item totals label</string>
    <string name="item_icon">Item_icon</string>
    <string name="enter_transaction_name">Enter transaction name</string>
    <string name="enter_amount">Enter amount</string>
    <string name="add_transaction_details_here">Add transaction details here</string>
    <string name="icon_representing_transaction">Icon representing transaction</string>
    <string name="UnreadCircle">The unread circle indicator</string>

    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary">Recipients and replies will be visible to everyone</string>
    <string name="compose_messages_empty">This is the start of your conversation. Say something nice!</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="compose_scheduled_for">Scheduled for</string>
    <string name="compose_scheduled_future">Selected time must be in the future!</string>
    <string name="compose_scheduled_plus">You must unlock to use scheduled messaging</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_hint">Write a message…</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_delete">Delete</string>
    <string name="compose_menu_previous">Previous</string>
    <string name="compose_menu_next">Next</string>
    <string name="compose_menu_clear">Clear</string>
    <string name="compose_details_title">Message details</string>
    <string name="compose_details_type">Type: %s</string>
    <string name="compose_details_from">From: %s</string>
    <string name="compose_details_to">To: %s</string>
    <string name="compose_details_subject">Subject: %s</string>
    <string name="compose_details_priority">Priority: %s</string>
    <string name="compose_details_size">Size: %s</string>
    <string name="compose_details_sent">Sent: %s</string>
    <string name="compose_details_received">Received: %s</string>
    <string name="compose_details_delivered">Delivered: %s</string>
    <string name="compose_details_error_code">Error code: %d</string>
    <string name="compose_attach_cd">Add an attachment</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_contact_error">Error reading contact</string>
    <!-- Example: SIM 1 (Verizon) selected-->
    <string name="compose_sim_changed_toast">SIM %1$d (%2$s) selected</string>
    <string name="compose_sim_cd">%s selected, change SIM card</string>
    <string name="compose_send_cd">Send message</string>
    <string name="no_status" />
    <string name="status_sent">Sent</string>
    <string name="status_pending">Pending...</string>
    <string name="status_failed">FAILED!</string>
    <string name="menu_action_settings">Settings</string>
    <string name="app_bar_switch" />
    <string name="attachment_image_thumbnail">thumbnail</string>
    <string name="attachment_list_detach">detach</string>
    <string name="message_in_sim">sim</string>
    <string name="message_in_avatar">avatar</string>
    <string name="message_out_sim">sim</string>
    <string name="message_out_cancel_icon">cancelIcon</string>
    <string name="dh_key_status">DH key status:</string>
    <string name="dh_key_status_loading">loading...</string>
    <string name="contact_keys_status">Contact keys status:</string>
    <string name="contact_keys_status_loading">loading...</string>
    <string name="contacts_keyed">Contacts keyed:</string>
    <string name="_contact_keyed_amount">0</string>
    <string name="total_contacts">Total contacts:</string>
    <string name="_total_contacts_amount">0</string>
    <string name="splash_screen_image">Splash screen image</string>
    <string name="app_bar_invite">Invite</string>
    <string name="concer_fragment_delivered">Delivered</string>
    <string name="conver_fragment_delivery_error">Delivery Error</string>

    <!-- Tag ids -->
    <item name="message" type="id"/>
    <item name="title" type="id"/>
</resources>